Archive2/f3/32b95b522c6e71/output
main.cpp: In function 'int main()':
main.cpp:22:5: error: 'cout' is not a member of 'std'
     std::cout << "node1: " << node1 << "\n"; // 0
     ^
main.cpp:23:5: error: 'cout' is not a member of 'std'
     std::cout << "node2: " << node2 << "\n"; // 1
     ^
main.cpp:24:5: error: 'cout' is not a member of 'std'
     std::cout << "node3: " << node3 << "\n"; // 2
     ^
main.cpp:25:5: error: 'cout' is not a member of 'std'
     std::cout << "node4: " << node4 << "\n"; // 3
     ^
main.cpp:39:9: error: 'cout' is not a member of 'std'
         std::cout << "Connection of " << sd << " (idNumber=" << std::setw(2) << s.idNumber << ") <-> "
         ^
